--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
   "name": "budbot-whatsapp-connector",
   "version": "1.0.0",
-  "description": "Conector WhatsApp Web para BudBot-IA",
+  "description": "WhatsApp Web Connector para BudBot-IA",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["whatsapp", "bot", "connector", "budbot"],
+  "author": "BudBot-IA Team",
+  "license": "MIT",
   "dependencies": {
     "whatsapp-web.js": "^1.24.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5", 
-    "axios": "^1.6.0",
     "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.3.1",
-    "puppeteer": "^21.0.0"
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "puppeteer": "^22.12.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "automation",
-    "whatsapp-web"
-  ],
-  "author": "BudBot-IA",
-  "license": "MIT"
+  }
 }
