--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "postinstall": "node setup-chrome.js"
   },
   "keywords": ["whatsapp", "bot", "connector", "budbot"],
   "author": "BudBot-IA Team",
