--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "budbot-whatsapp-connector",
-  "version": "3.0.0",
-  "description": "WhatsApp Web Connector para BudBot-IA - Render.com Optimized",
+  "version": "2.0.0",
+  "description": "WhatsApp Web Connector para BudBot-IA - Versão Otimizada",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -11,7 +11,7 @@
   "author": "BudBot-IA Team",
   "license": "MIT",
   "dependencies": {
-    "whatsapp-web.js": "1.23.0",
+    "whatsapp-web.js": "^1.24.0",
     "qrcode-terminal": "^0.12.0",
     "express": "^4.19.2",
     "cors": "^2.8.5",
