--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "budbot-whatsapp-connector",
-  "version": "3.2.0",
-  "description": "WhatsApp Web Connector para BudBot-IA - NPM Fix",
+  "version": "4.0.0",
+  "description": "WhatsApp Web Connector para BudBot-IA - Persistent Session",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["whatsapp", "bot", "connector", "budbot"],
+  "keywords": ["whatsapp", "bot", "connector", "budbot", "persistent"],
   "author": "BudBot-IA Team",
   "license": "MIT",
   "dependencies": {
     "puppeteer-core": "^21.0.0",
     "whatsapp-web.js": "1.23.0",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "express": "^4.19.2",
     "cors": "^2.8.5",
