--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# BudBot WhatsApp Connector v3.2 - NPM + Chromium Fix
+# BudBot WhatsApp Connector v4.0 - Persistent Session
 services:
   - type: web
     name: budbot-whatsapp-connector
@@ -20,4 +20,6 @@ services:
         value: true
       - key: PUPPETEER_EXECUTABLE_PATH
         value: /usr/bin/chromium
+      - key: WWEB_SESSION_PATH
+        value: /data/wweb-session
     healthCheckPath: /health
