Fix:correção --expose-gc

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# BudBot WhatsApp Connector v4.2 - Memory Optimized
+# BudBot WhatsApp Connector v4.2 - Memory Optimized (sem --expose-gc)
 services:
   - type: web
     name: budbot-whatsapp-connector
@@ -24,6 +24,4 @@ services:
         value: 0
       - key: WWEB_SESSION_PATH
         value: /data/wweb-session
-      - key: NODE_OPTIONS
-        value: "--max-old-space-size=256 --expose-gc"
     healthCheckPath: /health
