--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "budbot-whatsapp-connector",
-  "version": "4.2.0",
-  "description": "WhatsApp Web Connector para BudBot-IA - Memory Optimized",
+  "version": "4.3.0",
+  "description": "WhatsApp Web Connector para BudBot-IA - Render Stable",
   "main": "index.js",
   "scripts": {
-    "start": "node --max-old-space-size=256 index.js",
+    "start": "node --max-old-space-size=384 index.js",
     "dev": "nodemon index.js"
   },
   "keywords": ["whatsapp", "bot", "connector", "budbot", "persistent"],
   "author": "BudBot-IA Team",
   "license": "MIT",
   "dependencies": {
-    "puppeteer-core": "^21.0.0",
-    "whatsapp-web.js": "1.23.0",
+    "puppeteer-core": "^20.9.0",
+    "whatsapp-web.js": "1.22.2",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "express": "^4.19.2",
