--- a/package.json
+++ b/package.json
@@ -1,26 +1,49 @@
 {
   "name": "budbot-whatsapp-connector",
-  "version": "4.3.0",
-  "description": "WhatsApp Web Connector para BudBot-IA - Render Stable",
+  "version": "4.3.2",
+  "description": "Sistema inteligente de atendimento WhatsApp com integração IA - Connector Node.js",
   "main": "index.js",
-  "scripts": {
-    "start": "node --max-old-space-size=384 index.js",
-    "dev": "nodemon index.js"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
-  "keywords": ["whatsapp", "bot", "connector", "budbot", "persistent"],
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"No tests specified\" && exit 0",
+    "clean": "rm -rf node_modules package-lock.json",
+    "build": "echo \"Build complete\"",
+    "postinstall": "echo \"Dependencies installed successfully\""
+  },
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "ia",
+    "automation",
+    "render",
+    "nodejs"
+  ],
   "author": "BudBot-IA Team",
   "license": "MIT",
   "dependencies": {
-    "puppeteer-core": "^20.9.0",
-    "whatsapp-web.js": "1.22.2",
-    "qrcode": "^1.5.3",
-    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.31.0",
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5"
+    "axios": "^1.7.7",
+    "qrcode-terminal": "^0.12.0",
+    "dotenv": "^16.4.5",
+    "winston": "^3.15.0",
+    "puppeteer": "^23.7.1"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/budbot-ia/budbot-whatsapp-connector.git"
+  },
+  "homepage": "https://github.com/budbot-ia/budbot-whatsapp-connector#readme",
+  "bugs": {
+    "url": "https://github.com/budbot-ia/budbot-whatsapp-connector/issues"
   }
 }
