--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,45 @@
-# Render Stable Config
+# Render.com deployment configuration for BudBot WhatsApp Connector
 services:
   - type: web
     name: budbot-whatsapp-connector
-    env: docker
+    env: node
     plan: starter
-    dockerfilePath: ./Dockerfile
+    region: oregon
+    buildCommand: npm install --production
+    startCommand: node index.js
+    healthCheckPath: /health
+    
+    # Configurações de recursos
+    numInstances: 1
+    scaling:
+      minInstances: 1
+      maxInstances: 1
+    
+    # Configurações de rede
+    domains:
+      - budbot-whatsapp-connector.onrender.com
+    
+    # Variáveis de ambiente
     envVars:
-      - key: BUDBOT_API_URL
-        value: https://budbot-ia.onrender.com
-      - key: API_SECRET
-        sync: false
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 10000
-    healthCheckPath: /health
+        value: 3000
+      - key: BACKEND_URL
+        value: https://budbot-ia.onrender.com
+      - key: WEBHOOK_TOKEN
+        generateValue: true
+      - key: WWEB_SESSION_PATH
+        value: /opt/render/project/src/wweb_session
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: true
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: /usr/bin/chromium
+      - key: LOG_LEVEL
+        value: info
+        
+    # Disco persistente para sessões do WhatsApp
+    disk:
+      name: whatsapp-sessions
+      mountPath: /opt/render/project/src/wweb_session
+      sizeGB: 1
