--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: starter
     region: oregon
-    buildCommand: npm install --omit=dev
+    buildCommand: npm install --omit=dev --no-audit --no-fund
     startCommand: node index.js
     healthCheckPath: /health
     
