--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BudBot WhatsApp Connector v5.0 - Complete Integration with Backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index-simple.js",
+    "start": "node index.js",
     "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
